# fast-vue-ssr

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
app/: app.js  app.vue  bundle.js  client.js  package-lock.json  package.json  rollup.config.js  router.js  server.js
app/layouts/: default.vue
app/pages/: home.vue  other.vue
app/src/: Foobar.vue  app.js  client.js  index.js  router.js  server.js
app/src/layouts/: default.vue
app/src/pages/: other.vue
src/: data.rs  main.rs  pool.rs  render.js  renderer.js  renderer.rs  request.rs  vue.rs
src/jslib/: mod.rs  vue.rs  vue_router.rs  vue_server_renderer.rs
src/renderer/: jsctx.rs  mod.rs  pool.rs  request.rs
