[package]
name = "fast-vue-ssr"
version = "0.1.0"
authors = ["Jonas Galvez <jonasgalvez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
quick-js = "0.3.3"
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
surf = "1.0.3"
